fixed overflow problem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@ body {
   background-size: 900px 900px;
   background-repeat: no-repeat;
   height: 43vh;
-  overflow: hidden;
+  overflow: auto;
   box-sizing: border-box;
 }
 
